k8s/app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: milestone
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    name: milestone
