k8s/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-ng
  labels:
    app: whoami-ng
    team: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami-ng
  template:
    metadata:
      name: whoami-ng
      labels:
        app: whoami-ng
        name: whoami-ng
        team: test
    spec:
      automountServiceAccountToken: false
      serviceAccountName: milestone-sa
      containers:
        - name: whoami-ng
          image: whoami-ng:dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 250m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 1
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ["ALL"]
