k8s/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-ng
  labels:
    app: whoami-ng
spec:
  selector:
    app: whoami-ng
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
